<resources>
    <string name="app_name">MyLearn</string>
    <string name="ttt">中新网北京3月9日电 橙子鸡片、西芹炒草莓、玉米粒炒葡萄、葡萄西红柿……近日，号称“中国第九大菜系”的高校食堂又推出一批新鲜菜式，被网友称作“神菜”。有网友认为此类“神菜”为“黑暗料理”，表示“让人不忍直视”；但同时，也有网友认为是一种创意，表示“色泽好诱人，好想尝尝”。

2016年3月7日，安徽省安庆市，安庆师范大学菱湖校区食堂推出五道食堂“神菜”，分别是橙子鸡片、菠萝咕咾肉、玉米粒炒葡萄、葡萄西红柿和苹果肉片五道菜。味道清新的水果神菜获得大批学生追捧，很多之前听说的学生早早地来到食堂排队。中午放学后二十分钟“神菜”即被抢光。

安徽一高校连推五道“神菜”引吐槽 学生：有浪费现象

近日，有媒体报道，安庆师范学院菱湖校区食堂一口气推出橙子鸡片、菠萝咕咾肉、玉米粒炒葡萄、葡萄西红柿和苹果肉片等五道“神菜”，因味道清新获得大批学生追捧。

对于安庆师范学院食堂推出的“神菜”，网友态度不一。有网友支持称，他们搞出新花样，让学生们品出好坏定存留，不用老是那几样，见了都没胃口，这样挺好的。也有网友担忧，表示“水果的维生素都被破坏了”，怀疑“这菜吃下去安全么”。另有网友打趣称，“师傅，再来一份腐乳拌草莓、西瓜炖排骨、大蒜烧柚子……”

对此，安庆师范学院大二学生李可向中新网记者表示，其实新菜式并不是什么“黑暗料理”，味道整体还可以。

除了味道，菜的份量问题也受到学生关注。该校大二学生方林表示，菜色还是不错的，水果入菜有利于减肥的同学，而且可以提供充足维生素，但对于男生，这样的份量并不够，容易饿。

该校大一学生黄梅表示，五道菜中也就菠萝咕咾肉味道还行，因此，很多只是抱着尝鲜态度的人，由于有些菜不好吃，最后造成了浪费，而这样的浪费现象还挺常见的。

该校菱湖校区食堂经理赵娟华在接受中新网记者采访时表示，自己只想专心做好菜，多给学生提供新鲜菜式，带给学生食物营养。因此，今年特意推出五道新鲜菜式，也是为了迎合当前的学生品味，毕竟当前学生的品味更时尚、前卫了，如果食堂菜式仍一成不变的话，就很难满足学生的需求。

对于网友质疑“食材成本低”、“食材不新鲜”、“味道不好”等，赵娟华回应称，有些食材成本并不低，都是新鲜购进的，比如苹果就是五元一斤购进的。而为了确保食物营养及口味，做菜很细心。水果并未爆炒，只是微微加热，并没有破坏原味。</string>


    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_addfriends">添加朋友</string>
    <string name="action_scan">扫一扫</string>

    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_fond">发现</string>
    <string name="tab_me">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
