<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_Search"
        android:icon="@drawable/actionbar_search_icon"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/actionbar_add_icon"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_group_chat"
        android:title="@string/action_group_chat"
        android:icon="@drawable/menu_group_chat_icon"/>
    <item
        android:id="@+id/action_add_friend"
        android:title="@string/action_addfriends"
        android:icon="@drawable/menu_add_icon"/>
    <item
        android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:icon="@drawable/men_scan_icon"/>
    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:icon="@drawable/menu_feedback_icon"/>

</menu>